--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "marma-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
+  "main": "marma.js",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --fix",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node marma.js",
+    "dev": "nodemon marma.js"
   },
   "keywords": [],
   "author": "",
